Add documentation for new Go SDK

--- a/packages/docs/pages/app/api.mdx
+++ b/packages/docs/pages/app/api.mdx
@@ -95,4 +95,5 @@ We offer official client libraries that work with these data structures in a few
 - [PHP](/lib/php) (experiments only)
 - [Ruby](/lib/ruby) (experiments only)
 - [Python](/lib/python) (experiments only)
+- [Go](/lib/go) (experiments and features)
 - [Build your own](/lib/build-your-own) (experiments only)
