--- a/packages/docs/pages/lib/index.mdx
+++ b/packages/docs/pages/lib/index.mdx
@@ -7,6 +7,7 @@ We offer official client libraries in a few popular languages:
 - [PHP](/lib/php)
 - [Ruby](/lib/ruby)
 - [Python](/lib/python)
+- [Go](/lib/go)
 
 There is also a guide if you want to [build your own](/lib/build-your-own).
 
