Add Kotlin code example and links through docs and apps. Use "SDK" instead of "Client Library" throughout.

--- a/packages/docs/pages/app/api.mdx
+++ b/packages/docs/pages/app/api.mdx
@@ -86,14 +86,15 @@ The `status` field mirrors the HTTP status. The `features` field has feature def
 
 Each feature definition has a default value and optional rules that override the value based on targeting conditions. Rules can also be experiments where values are randomly assigned to users.
 
-## Official Client Libraries
+## Official SDKs
 
-We offer official client libraries that work with these data structures in a few popular languages with more coming soon.
+We offer official SDKs that work with these data structures in a few popular languages with more coming soon.
 
 - [Javascript/Typescript](/lib/js) (experiments and features)
 - [React](/lib/react) (experiments and features)
+- [Go](/lib/go) (experiments and features)
+- [Kotlin (Android)](/lib/kotlin) (experiments and features)
 - [PHP](/lib/php) (experiments only)
 - [Ruby](/lib/ruby) (experiments only)
 - [Python](/lib/python) (experiments only)
-- [Go](/lib/go) (experiments and features)
 - [Build your own](/lib/build-your-own) (experiments only)
