--- a/packages/docs/pages/lib/index.mdx
+++ b/packages/docs/pages/lib/index.mdx
@@ -1,6 +1,6 @@
-# Client Libraries
+# SDKs
 
-We offer official client libraries in a few popular languages:
+We offer official SDKs in a few popular languages:
 
 - [Javascript/Typescript](/lib/js)
 - [React](/lib/react)
@@ -8,6 +8,7 @@ We offer official client libraries in a few popular languages:
 - [Ruby](/lib/ruby)
 - [Python](/lib/python)
 - [Go](/lib/go)
+- [Kotlin (Android)](/lib/kotlin)
 
 There is also a guide if you want to [build your own](/lib/build-your-own).
 
