--- a/packages/docs/pages/lib/kotlin.mdx
+++ b/packages/docs/pages/lib/kotlin.mdx
@@ -1,4 +1,4 @@
-# GrowthBook Kotlin SDK
+# Kotlin (Android)
 
 This SDK supports both Java and Kotlin Android apps using Android SDK 26 and above.
 
@@ -111,6 +111,6 @@ The `GBExperimentResult` object returns the following properties:
 - **hashAttribute** (string) - The user attribute used to assign a variation
 - **hashValue** (string) - The value of the attribute used to assign a variation
 
-## GitHub
+## More Documentation
 
 The GitHub repo for this SDK has more detailed class and method documentation - https://github.com/growthbook/growthbook-kotlin
