--- a/packages/docs/pages/app/visual.mdx
+++ b/packages/docs/pages/app/visual.mdx
@@ -2,7 +2,7 @@
 
 The Visual Editor enables non-technical users to create A/B tests without writing code.
 
-You can decide on a test-by-test basis whether you want to write code using the Client Libraries or use the Visual Editor.
+You can decide on a test-by-test basis whether you want to write code using the SDKs or use the Visual Editor.
 
 ## Setup
 
@@ -65,7 +65,7 @@ This will revert all previously running experiments and start new ones based on 
 
 ## Using the Editor
 
-When creating an experiment, you can choose to create a `Code` experiment (using a Client Library) or a `Visual` experiment (using the Visual Editor).
+When creating an experiment, you can choose to create a `Code` experiment (using an SDK) or a `Visual` experiment (using the Visual Editor).
 
 ![Experiment Form](/images/experiment-type-form.png)
 
