--- a/packages/docs/pages/index.mdx
+++ b/packages/docs/pages/index.mdx
@@ -13,7 +13,7 @@ We believe A/B testing should sit on top of your **existing data and metrics**, 
 
 We believe in **data transparency**. You can export results as a Jupyter notebook and our Bayesian stats engine is developed out in the open on [GitHub](https://github.com/growthbook/growthbook/tree/main/packages/stats).
 
-We are fanatical about **performance**. Our [Client Libraries](/lib) are crazy fast and light-weight and evaluate everything locally with no network requests.
+We are fanatical about **performance**. Our [SDKs](/lib) are crazy fast and light-weight and evaluate everything locally with no network requests.
 
 We believe good ideas come from everywhere. GrowthBook gives you **access controls** and guardrails to safely open up A/B testing to your entire organization.
 
