--- a/packages/docs/pages/lib/kotlin.mdx
+++ b/packages/docs/pages/lib/kotlin.mdx
@@ -45,15 +45,15 @@ if (gb.feature("my-feature").on) {
 
 The `feature` method takes a String feature name and returns a `FeatureResult` object with a few useful properties:
 
-- **value** (Any) - The assigned value of the feature
-- **on** (Boolean) - The value cast to a boolean
-- **off** (Boolean) - The value cast to a boolean and then negated
-- **source** (String) - Why the value was assigned to the user. One of "unknownFeature", "defaultValue", "force", or "experiment"
+- **value** (`Any`) - The assigned value of the feature
+- **on** (`Boolean`) - The value cast to a boolean
+- **off** (`Boolean`) - The value cast to a boolean and then negated
+- **source** (`String`) - Why the value was assigned to the user. One of "unknownFeature", "defaultValue", "force", or "experiment"
 
 When the source is "experiment", there are 2 additional properties that tell you which experiment was used and more details about the result of the experiment:
 
-- **experiment** (GBExperiment)
-- **experimentResult** (GBExperimentResult)
+- **experiment** (`GBExperiment`)
+- **experimentResult** (`GBExperimentResult`)
 
 Here are some examples:
 
@@ -93,23 +93,23 @@ println(result.value)
 
 The `GBExperiment` class has two required properties - `key` and `variations`. There are also a number of optional properties:
 
-- **key** (`string`) - The unique identifier for this experiment
+- **key** (`String`) - The unique identifier for this experiment
 - **variations** (`Any[]`) - Array of variations to decide between
-- **weights** (`float[]`) - How to weight traffic between variations. Must add to 1.
-- **active** (`boolean`) - If set to false, always return the control (first variation)
-- **coverage** (`float`) - What percent of users should be included in the experiment (between 0 and 1, inclusive)
+- **weights** (`Float[]`) - How to weight traffic between variations. Must add to 1.
+- **active** (`Boolean`) - If set to false, always return the control (first variation)
+- **coverage** (`Float`) - What percent of users should be included in the experiment (between 0 and 1, inclusive)
 - **condition** (`GBCondition`) - Optional targeting condition
-- **namespace** (`[string, int, int]`) - Adds the experiment to a namespace
-- **force** (`int`) - All users included in the experiment will be forced into the specific variation index
-- **hashAttribute** (`string`) - What user attribute should be used to assign variations (defaults to `id`)
+- **namespace** (`[String, Int, Int]`) - Adds the experiment to a namespace
+- **force** (`Int`) - All users included in the experiment will be forced into the specific variation index
+- **hashAttribute** (`String`) - What user attribute should be used to assign variations (defaults to `id`)
 
 The `GBExperimentResult` object returns the following properties:
 
-- **inExperiment** (boolean)
-- **variationId** (int) - The array index of the assigned variation
-- **value** (Any) - The value of the assigned variation
-- **hashAttribute** (string) - The user attribute used to assign a variation
-- **hashValue** (string) - The value of the attribute used to assign a variation
+- **inExperiment** (`Boolean`)
+- **variationId** (`Int`) - The array index of the assigned variation
+- **value** (`Any`) - The value of the assigned variation
+- **hashAttribute** (`String`) - The user attribute used to assign a variation
+- **hashValue** (`String`) - The value of the attribute used to assign a variation
 
 ## More Documentation
 
