--- a/packages/docs/pages/app/features.mdx
+++ b/packages/docs/pages/app/features.mdx
@@ -108,21 +108,19 @@ In advanced mode, you can specify conditions using the MongoDB query syntax. Thi
 
 **Note**: We use the MongoDB query syntax because it is easy to read and write and is well documented. The conditions are never actually executed against a database. Instead, our SDKs include a light-weight interpreter for this syntax that runs entirely locally.
 
-### Force Rules
+### Forced Value
 
-The simplest type of override rule is a "Force" rule. This forces everyone who matches the condition to get the specified value. For example, you could have a feature default to OFF and use force rules to turn it ON for a specific list of countries.
+The simplest type of override rule is a "Forced Value" rule. This forces everyone who matches the targeting condition to get a specific value. For example, you could have a feature default to OFF and use force rules to turn it ON for a specific list of countries.
 
-Force rules are most useful when you want to target a specific value to a subset of users. For example, you want beta users to get the new value and everyone else to get the old value.
+### Percentage Rollout
 
-### Rollout Rules
-
-Percent rollout rules let you gradually release a feature value to a random sample of your users.
+Percentage Rollout rules let you gradually release a feature value to a random sample of your users.
 
 Rollouts are most useful when you want to make sure a new feature doesn't break your app or site. You start by releasing to maybe 10% of users. Then after a while if your metrics look ok, you increase to 30% and so on.
 
 For rollout rules, you choose a user attribute to use for the random sample. Users with the same attribute value will be treated the same (either included or not included in the rollout). For example, if you choose a "company" attribute, then multiple employees in the same company will get the same experience.
 
-### Experiment Rules
+### Experiments
 
 The last type of rule is an Experiment. This randomly splits users into buckets, assigns them different values, and tracks that assignment in your data warehouse or analytics tool.
 
@@ -163,7 +161,7 @@ fetch(`https://cdn.growthbook.io/api/features/${MY_API_KEY}`)
   });
 ```
 
-For self-hosted deployments, we highly recommend using a CDN like Fastly or CloudFlare. The GrowthBook API alone is not meant to serve large amounts of production traffic.
+For self-hosted deployments, we highly recommend using a CDN like Fastly or CloudFlare. The GrowthBook API alone is not meant to serve large amounts of production traffic. The API returns standard cache headers (max-age, stale-while-revalidate, and stale-if-error) so no special CDN configuration is required.
 
 The downside of this approach is that you're adding a network request into your critical rendering path. If the HTTP request is slow (or if the API crashes) for whatever reason, your user experience will suffer.
 
